--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       KONG_DATABASE: postgres
 
-      KONG_PG_HOST: ${POSTGRES_HOST}
+      KONG_PG_HOST: 10.0.0.13
       KONG_PG_PORT: ${POSTGRES_PORT}
       KONG_PG_USER: ${POSTGRES_USER}
       KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
@@ -15,7 +15,7 @@ services:
 
      # SSL DISABLED for Now : TODO
       KONG_PG_SSL: "off"
-      KONG_PG_SSL_VERIFY: "off"
+      # KONG_PG_SSL_VERIFY: "off"
         
 
       KONG_PROXY_ACCESS_LOG: /dev/stdout
@@ -25,9 +25,8 @@ services:
 
 
       KONG_ADMIN_LISTEN: "0.0.0.0:8001"
-      KONG_PROXY_LISTEN: "0.0.0.0:8000, 0.0.0.0:8443 ssl"
-    volumes:
-      - ./rds-ca.pem:/etc/ssl/certs/rds-ca.pem:ro
+      KONG_PROXY_LISTEN: "0.0.0.0:8000, 0.0.0.0:8443"
+    
 
     
     ports:
